--- a/src/assets/scss/_main.scss
+++ b/src/assets/scss/_main.scss
@@ -16,6 +16,11 @@ body {
     min-height: 100%;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    //transition: background-color 250ms;
+    //
+    //* {
+    //    transition: background 250ms, border-color 250ms ;
+    //}
 }
 
 a, button {
